createInbox now idempotent
